--- a/style.css
+++ b/style.css
@@ -1,335 +1,352 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&family=Roboto:wght@100;300;400;500;700&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :root {
-    --primary-color: #183b56;
-    --secondary-color: #577592;
-    --hov-color: #2294ed;
+  --primary-color: #183b56;
+  --secondary-color: #577592;
+  --hov-color: #2294ed;
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
-    max-width: 1250px;
-    margin-inline: auto;
-    padding: 0px 20px;
+  max-width: 1250px;
+  margin-inline: auto;
+  padding: 0px 20px;
+  overflow: hidden;
 }
 
 .flex {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 
 /* Banner */
 
 .banner {
-    background-color: #e74694;
-    background-image: url(./assets/asset\ 32.png);
-    background-size: 300px;
-    background-repeat: repeat;
+  background-color: #e74694;
+  background-image: url(./assets/asset\ 32.png);
+  background-size: 300px;
+  background-repeat: repeat;
 }
 
 .banner p {
-    font-size: 0.9rem;
-    font-weight: 400;
-    color: white;
-    padding: 14px 20px;
-    text-align: center;
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: white;
+  padding: 14px 20px;
+  text-align: center;
 }
-
 
 /*  Nav Bar */
 
+.nav-toggle {
+  display: none;
+}
+
 .main-nav {
-    margin-top: 25px;
-    justify-content: space-between;
+  margin-top: 25px;
+  justify-content: space-between;
+  position: relative;
 }
 
 .company-logo img {
-    width: 180px;
+  width: 180px;
 }
 
 .nav-bar ul {
-    gap: 50px;
-    justify-content: space-between;
+  gap: 50px;
+  justify-content: space-between;
+}
+
+.nav-bar ul li {
+  padding: 10px 0px;
 }
 
 a {
-    transition: all 0.36s ease;
+  transition: all 0.36s ease;
 }
 
 a:hover {
-    color: var(--hov-color);
+  color: var(--hov-color);
 }
 
 .button1 {
-    border-radius: 6px;
-    font-weight: 500;
-    box-shadow: 0 0 2px var(--secondary-color);
-    padding: 9px 20px;
-    transition: all 0.36s ease;
+  border-radius: 6px;
+  font-weight: 500;
+  box-shadow: 0 0 2px var(--secondary-color);
+  padding: 9px 20px;
+  transition: all 0.36s ease;
 }
 
 .button1:hover {
-    color: var(--hov-color);
-    box-shadow: 0 0 2px var(--hov-color);
+  color: var(--hov-color);
+  box-shadow: 0 0 2px var(--hov-color);
 }
 
 .button2 {
-    border-radius: 6px;
-    background-color: #0000ee;
-    font-weight: 500;
-    color: white !important;
-    box-shadow: 0 0 2px var(--secondary-color);
-    padding: 9px 20px;
-    transition: all 0.36s ease;
+  border-radius: 6px;
+  background-color: #0000ee;
+  font-weight: 500;
+  color: white !important;
+  box-shadow: 0 0 2px var(--secondary-color);
+  padding: 9px 20px;
+  transition: all 0.36s ease;
+  text-align: center;
 }
 
 .button2:hover {
-    background-color: var(--hov-color);
+  background-color: var(--hov-color);
 }
-
 
 /* Hero */
 
 .hero {
-    margin-top: 80px;
-    gap: 100px;
+  margin-top: 80px;
+  gap: 100px;
 }
 
 .hero-text {
-    align-items: flex-start;
-    gap: 20px;
+  align-items: flex-start;
+  gap: 20px;
+  max-width: 40vw;
 }
 
 .hero-text h2 {
-    font-size: 48px;
-    font-weight: 500;
+  font-size: 48px;
+  font-weight: 500;
 }
 
 .hero-text p {
-    /* margin-top: 10px; */
-    font-size: 20px;
-    color: var(--secondary-color);
-    margin-bottom: 5px;
+  /* margin-top: 10px; */
+  font-size: 20px;
+  color: var(--secondary-color);
+  margin-bottom: 5px;
 }
 
 .hero-img img {
-    width: 600px;
+  width: 100%;
 }
-
 
 /* Company Section */
 
 .company-section {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .company-header {
-    text-align: center;
-    font-weight: 500;
-    margin-bottom: 30px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
 .company-section-logo {
-    justify-content: space-between;
+  justify-content: space-evenly;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .company-section-logo img {
-    height: 46px;
+  height: 46px;
 }
-
 
 /* Features */
 
 .features {
-    margin-top: 80px;
-    background-image: url(./assets/asset\ 34.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+  margin-top: 80px;
+  background-image: url(./assets/asset\ 34.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .feature-card {
-    margin-top: 50px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 40px;
-    margin-bottom: 40px;
+  margin-top: 50px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 40px;
 }
 
 .features-header {
-    text-align: center;
+  text-align: center;
 }
 
 .features-header p {
-    font-size: 32px;
-    text-align: center;
-    margin-bottom: 20px;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .card-img {
-    flex-direction: column;
-    align-items: center;
-    gap: 17px;
-    max-width: 30%;
-    text-align: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 17px;
+  max-width: 30%;
+  text-align: center;
 }
 
 .card-img img {
-    width: 60px;
+  width: 60px;
 }
 
 .card-img h2 {
-    font-weight: 500;
-    font-size: 24px;
+  font-weight: 500;
+  font-size: 24px;
 }
 
 .card-img p {
-    color: var(--secondary-color);
-    font-size: 18px;
+  color: var(--secondary-color);
+  font-size: 18px;
 }
-
 
 /* Big Feature Container */
 
 .big-fea {
-    gap: 90px;
+  gap: 20px;
 }
 
 .big-img img {
-    width: 100%;
+  margin-top: 20px;
+  width: 100%;
+}
+
+#second-big-feature {
+  flex-direction: row-reverse;
 }
 
 .big-content {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 .big-content h3 {
-    font-size: 18px;
-    font-weight: 500;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .big-content p {
-    font-size: 16px;
-    color: var(--secondary-color);
+  font-size: 16px;
+  color: var(--secondary-color);
 }
-
 
 /* Examples */
 
 .examples-header {
-    margin-top: 50px;
-    text-align: center;
-    font-weight: 500;
-    margin-bottom: 30px;
+  margin-top: 50px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
 .examples-header p {
-    font-size: 32px;
-    text-align: center;
-    margin-bottom: 20px;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .example-card {
-    width: 23%;
-    border-radius: 5px;
-    position: relative;
-    min-height: 300px;
-    background-color: black;
-    transition: all 0.36s ease;
+  width: 23%;
+  border-radius: 5px;
+  position: relative;
+  height: 300px;
+  background-color: black;
+  transition: all 0.36s ease;
 }
 
 .example-card:nth-child(1) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 36.jpeg);
-    background-size: cover;
+  background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)),
+    url(./assets/asset\ 36.jpeg);
+  background-size: cover;
 }
 
 .example-card:nth-child(2) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 37.jpeg);
-    background-size: cover;
+  background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)),
+    url(./assets/asset\ 37.jpeg);
+  background-size: cover;
 }
 
 .example-card:nth-child(3) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 38.jpeg);
-    background-size: cover;
+  background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)),
+    url(./assets/asset\ 38.jpeg);
+  background-size: cover;
 }
 
 .example-card:nth-child(4) {
-    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset\ 39.jpeg);
-    background-size: cover;
+  background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)),
+    url(./assets/asset\ 39.jpeg);
+  background-size: cover;
 }
 
 .example-card:hover {
-    box-shadow: 0px 0px 15px #888;
+  box-shadow: 0px 0px 15px #888;
 }
 
 .example-card-area {
-    margin-top: 30px;
-    justify-content: space-between;
+  margin-top: 30px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .example-card h3 {
-    color: white;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    right: 20px;
+  color: white;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
 }
 
 .main-cta {
-    flex-direction: column;
-    color: white;
-    gap: 50px;
+  flex-direction: column;
+  color: white;
+  gap: 50px;
 }
 
 .cta {
-    margin-top: 20px;
-    padding: 100px 20px 80px 20px;
-    background-color: #183b54;
+  margin-top: 20px;
+  padding: 100px 20px 80px 20px;
+  background-color: #183b54;
 }
 
 .linkcol {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
 }
 
 .linkcol h4 {
-    font-size: 25px;
-    font-weight: 400;
+  font-size: 25px;
+  font-weight: 400;
 }
 
 footer {
-    padding-block: 80px;
-    background-color: #ebf2fa;
+  padding-block: 80px;
+  background-color: #ebf2fa;
 }
 
 .footercontainer {
-    align-items: flex-start;
-    justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .subfooter {
-    text-align: center;
-    background-color: #183b56;
-    color: whitesmoke;
-    padding: 10px;
+  text-align: center;
+  background-color: #183b56;
+  color: whitesmoke;
+  padding: 10px;
 }
